fairway-sf/force-app/main/default/objects/Round_Hole_Result__c/Round_Hole_Result__c.object-meta.xml
<CustomObject>
    <label>Round Hole Result</label>
    <pluralLabel>Round Hole Results</pluralLabel>
    <description>One record per participant per hole. Only applies when Golf_Session__c.Session_Type__c = Round. Kept deliberately lean for MVP (score only) since many simulator setups don't reliably capture real putting/GIR/fairway data.</description>
    <nameField>
        <label>Round Hole Result Name</label>
        <type>AutoNumber</type>
        <displayFormat>RHR-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>