fairway-sf/force-app/main/default/objects/Round_Hole_Result__c/fields/Golf_Session__c.field-meta.xml
<CustomField>
    <fullName>Golf_Session__c</fullName>
    <label>Golf Session</label>
    <type>Lookup</type>
    <referenceTo>Golf_Session__c</referenceTo>
    <relationshipName>Round_Hole_Results</relationshipName>
    <relationshipLabel>Round Hole Results</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>