fairway-sf/force-app/main/default/objects/Round_Hole_Result__c/fields/Hole_Number__c.field-meta.xml
<CustomField>
    <fullName>Hole_Number__c</fullName>
    <label>Hole Number</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>