fairway-sf/force-app/main/default/objects/Round_Hole_Result__c/fields/Par__c.field-meta.xml
<CustomField>
    <fullName>Par__c</fullName>
    <label>Par</label>
    <type>Number</type>
    <precision>1</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>