fairway-sf/force-app/main/default/objects/Round_Hole_Result__c/fields/Score_To_Par__c.field-meta.xml
<CustomField>
    <fullName>Score_To_Par__c</fullName>
    <label>Score To Par</label>
    <type>Number</type>
    <formula>Strokes__c - Par__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>