fairway-sf/force-app/main/default/objects/Round_Hole_Result__c/fields/Strokes__c.field-meta.xml
<CustomField>
    <fullName>Strokes__c</fullName>
    <label>Strokes</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>